--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
+    "@casl/ability": "^6.7.1",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
@@ -30,10 +32,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
     "@prisma/client": "^5.11.0",
+    "@types/multer": "^1.4.11",
+    "Express": "^3.0.1",
+    "axios": "^1.6.8",
     "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.10",
+    "mustache": "^4.2.0",
     "prisma": "^5.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
