--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/client": "^5.11.0",
     "@types/multer": "^1.4.11",
     "Express": "^3.0.1",
+    "argon2": "^0.40.1",
     "axios": "^1.6.8",
     "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
@@ -42,7 +43,8 @@
     "mustache": "^4.2.0",
     "prisma": "^5.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "snowflake-id": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
