--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.10",
     "mustache": "^4.2.0",
+    "nanoid": "^3.0.0",
     "prisma": "^5.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "snowflake-id": "^1.1.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
